# loot-userlist-yaml-manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  vcpkg.json
benchmarks/: CMakeLists.txt
benchmarks/luyamlman_error_s_error_consolidate_errors_benchmark/include/benchmark/types/: t_child_count.hpp  t_depth.hpp
benchmarks/luyamlman_error_s_error_consolidate_errors_benchmark/src/: benchmark.cpp
benchmarks/luyamlman_load_order_parser_benchmark/include/benchmark/: aliases.hpp  benchmark_allocator_initializer.hpp  s_benchmark_allocator_initializer.hpp  s_benchmark_context.hpp
benchmarks/luyamlman_load_order_parser_benchmark/src/: benchmark.cpp
design/: requirements.md
ffi/: CMakeLists.txt
ffi/include/: loot_userlist_yaml_manager_ffi.h
ffi/src/: loot_userlist_yaml_manager_ffi.cpp
include/luyamlman/: overloads.hpp  tags.hpp  unit.hpp
include/luyamlman/concepts/: c_string_view_strong_type.hpp
include/luyamlman/error/: alloc_fail.hpp  error_details_types.hpp  s_error.hpp  s_error.inl  v_error_details.hpp
include/luyamlman/error/details_types/: allocation_failure.hpp  s_allocation_failure.hpp  s_filesystem_error.hpp  s_load_order_read_error.hpp
include/luyamlman/manager/: load_order_parser.hpp  load_order_parser.tpp  s_config.hpp  s_data.hpp  s_data.inl  s_manager.hpp  s_manager.tpp
include/luyamlman/memory/: arena_allocator.hpp  arena_allocator.inl  linear_allocator.hpp  singleton.hpp
include/luyamlman/raii/: s_allocator_context.hpp  s_application_global_allocator_handler.hpp  s_scoped_global_allocator_handler.hpp  scoped_global_allocator_handler.hpp
include/luyamlman/rule/: s_loot_group_rule_entry.hpp  s_plugin_rule_entry.hpp
include/luyamlman/types/: std_internals.hpp  t_byte.hpp  t_loot_group_name.hpp  t_plugin_name.hpp
mo2-plugin/: setup.bat  setup.sh
mo2-plugin/loot_userlist_yaml_manager/: __init__.py  lib.py
mo2-plugin/tests/: lib_test.py  load_order1.txt
src/: CMakeLists.txt
src/error/: s_error.cpp
src/manager/: load_order_parser.cpp  s_manager.cpp
src/raii/: s_application_global_allocator_handler.cpp
src/types/: t_loot_group_name.cpp  t_plugin_name.cpp
tests/: CMakeLists.txt
tests/data/: load_order1.txt  load_order2.txt  load_order3.txt  load_order4.txt
tests/include/luyamlman_tests/ffi/: ffi_wrapper.hpp
tests/src/luyamlman_tests/ffi/: ffi_wrapper.cpp
tests/src/unit_tests/ffi/: ffi.test.cpp
tests/src/unit_tests/luyamlman/error/: s_error.test.cpp
tests/src/unit_tests/luyamlman/manager/: load_order_parser.test.cpp
tests/src/unit_tests/luyamlman/memory/: linear_allocator.test.cpp
